--- a/2.nadal/form1.html
+++ b/2.nadal/form1.html
@@ -7,6 +7,51 @@
 		</style>
 	</head>
 	<body>
-	
+<form method="get" action="#">
+			<table border="0">
+				<caption>1.form</caption>
+				<tr>
+					<td>One: </td>
+					<td>
+						<input type="text" name="text" value="Kuidas on?" placeholder="Kirjuta midagi..." required>
+					</td>
+				</tr>
+				<tr>
+					<td>Two: </td>
+					<td>
+						<input type="password" name="passwd" value="parool" placeholder="Kirjuta parool" required>
+					</td>
+				</tr>
+				<tr>
+					<td>Three: </td>
+					<td>
+						<input type="email" name="email" value="example@example" placeholder="Kirjuta email" required>
+					</td>
+				</tr>
+				<tr>
+					<td>Four: </td>
+					<td>
+						<input type="radio" name="radio" value="check">Check IT!
+					</td>
+				</tr>
+				<tr>
+					<td>Five: </td>
+					<td>
+						<input type="date" name="date" required>
+					</td>
+				</tr>
+				<tr>
+					<td>Six: </td>
+					<td>
+						<input type="number" name="number" value="2" placeholder="Ainult numbrid" required>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<input type="submit" value="Send">
+					</td>
+				</tr>
+			</table>
+		</form>
 	</body>
 </html>
