--- a/2.nadal/form2.html
+++ b/2.nadal/form2.html
@@ -7,6 +7,31 @@
 		</style>
 	</head>
 	<body>
-	
+		<form method="post" action="#">
+			<table border="0">
+				<caption>2.form</caption>
+				<tr>
+					<td>One: </td>
+					<td>
+						<select name="select">
+							<option value="1">One</option>
+							<option value="2">Two</option>
+							<option value="3">Three</option>
+						</select>
+					</td>
+				</tr>
+				<tr>
+					<td>Two: </td>
+					<td>
+						<textarea rows="5" cols="30" name="text" placeholder="Midagi...."></textarea>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<input type="submit" value="Send">
+					</td>
+				</tr>
+			</table>
+		</form>
 	</body>
 </html>
