Esimene tabel - index

--- a/2.nadal/index.html
+++ b/2.nadal/index.html
@@ -4,9 +4,53 @@
 		<meta charset="utf-8">
 		<title>Kodune ulesanne - 2. nadal (Brokan)</title>
 		<style type="text/css">
+			td:nth-child(1) { background: hsl(150, 50%, 50%); }
+			td:nth-child(2) { background: hsl(160, 60%, 50%); }
+			td:nth-child(3) { background: hsl(170, 70%, 50%); }
+			td:nth-child(4) { background: hsl(180, 80%, 50%); }
+			td:nth-child(5) { background: hsl(190, 90%, 50%); }
+			td:nth-child(6) { background: hsl(200, 99%, 50%); }
 		</style>
 	</head>
 	<body>
-	
+		<table>
+			<caption>
+				Table 1. Muusika
+			</caption>
+			<thead>
+				<tr>
+					<th>Laul</th>
+					<th>Laulja</th>
+					<th>Aasta</th>
+					<th>Riik</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>Taylor Gang</td>
+					<td>Wiz Khalifa</td>
+					<td>2011</td>
+					<td>USA</td>
+				</tr>
+				<tr>
+					<td>Black and Yellow</td>
+					<td>Wiz Khalifa</td>
+					<td>2011</td>
+					<td>USA</td>
+				</tr>
+				<tr>
+					<td>Lose yourself</td>
+					<td>Eminem</td>
+					<td>2002</td>
+					<td>USA</td>
+				</tr>
+				<tr>
+					<td>Yamborghini High</td>
+					<td>A$AP Mob</td>
+					<td>2016</td>
+					<td>USA</td>
+				</tr>
+			</tbody>
+		</table>
 	</body>
 </html>
