Teine tabel - index

--- a/2.nadal/index.html
+++ b/2.nadal/index.html
@@ -52,5 +52,27 @@
 				</tr>
 			</tbody>
 		</table>
+		<br>
+		<table border="1">
+			<caption>
+				Table 2. Ruut
+			</caption>
+			<tr>
+				<td colspan="3">Text</td>
+				<td rowspan="3">Text</td>
+			</tr>
+			<tr>
+				<td rowspan="3">Text</td>
+				<td>Text</td>
+				<td>Text</td>
+			</tr>
+			<tr>
+				<td>Text</td>
+				<td>Text</td>
+			</tr>
+			<tr>
+				<td colspan="3">Text</td>
+			</tr>
+		</table>
 	</body>
 </html>
