--- a/2.nadal/index.html
+++ b/2.nadal/index.html
@@ -74,5 +74,11 @@
 				<td colspan="3">Text</td>
 			</tr>
 		</table>
+		<br>
+		<ul>
+			<li><a href="form1.html" target="formid">1.form</a></li>
+			<li><a href="form2.html" target="formid">2.form</a></li>
+		</ul>
+		<iframe name="formid" src="form1.html" frameborder="1" height="230" width="320" algin="center"></iframe>
 	</body>
 </html>
