--- a/3.nadal/text.html
+++ b/3.nadal/text.html
@@ -4,7 +4,21 @@
 		<meta charset="utf-8">
 		<title>Kodune ulesanne - 1. nadal (Brokan)</title>
 		<style type="text/css">
-			
+			img {
+				float: right;
+				border: 1px groove green;
+				border-radius: 15px;
+			}
+			body{
+				background: #DCDCDC;
+				font-size: 100%;
+				cursor: crosshair;
+			}
+			h2{
+				border: 5px groove green;
+				border-radius: 10px;
+				display: inline-block;
+			}
 		</style>
 	</head>
 	<body>
