--- a/3.nadal/text.html
+++ b/3.nadal/text.html
@@ -19,6 +19,35 @@
 				border-radius: 10px;
 				display: inline-block;
 			}
+			#tcp p{
+				font-size: 110%;
+				color: red;
+				cursor: help;
+			}
+			#tcp b{
+				font-size: 125%;
+				color: green;
+			}
+			#udp p{
+				font-size: 110%;
+				color: blue;
+				cursor: wait;
+			}
+			#udp ul{
+				list-style-type: upper-alpha;
+				color: green;
+			}	
+			a{
+				color: white;
+			}
+			img:hover{
+				float: right;
+				border: 1px groove red;
+				border-radius: 15px;
+			}
+			#tcp:hover{
+				background: white;
+			}
 		</style>
 	</head>
 	<body>
