--- a/4.nadal/duck.html
+++ b/4.nadal/duck.html
@@ -8,6 +8,13 @@
 		</style>
 	</head>
 	<body>
-	
+		<img src="http://enos.itcollege.ee/~ttanav/VRI/Kodused/04/duck.png" alt="part">
+		<div id="primary">
+			<div class="secondary"></div>
+			<div class="secondary"></div>
+			<div class="secondary"></div>
+			<div class="secondary"></div>
+			<div class="secondary"></div>
+		</div>		
 	</body>
 </html>
