--- a/4.nadal/duck.html
+++ b/4.nadal/duck.html
@@ -4,7 +4,30 @@
 		<meta charset="utf-8">
 		<title>Kodune ulesanne - 4. nadal (Brokan</title>
 		<style type="text/css">
-
+			body{
+				width: 100%;
+				height:100%;
+			}
+			#primary{
+				width: 100px;
+				height: 100px;
+				position: fixed;
+				margin-top: 250px;
+				margin-left: 600px;
+				background-color: transparent;
+				border: none;
+			}
+			.secondary {
+				border-radius: 50%;
+				position: absolute;
+			}
+			img {
+				width: 100%;
+				height:100%;
+				position: fixed;
+				left: 0px;
+				top: 0px;
+			}
 		</style>
 	</head>
 	<body>
