--- a/4.nadal/duck.html
+++ b/4.nadal/duck.html
@@ -21,6 +21,46 @@
 				border-radius: 50%;
 				position: absolute;
 			}
+			div:nth-child(1) {
+				height: 100%;
+				width: 100%;
+				background-color: white;
+				border: 1px solid blue;
+				left: 0;
+				top: 0;
+			}
+			div:nth-child(2) {
+				height: 80%;
+				width: 80%;
+				background-color: red;
+				border: 1px solid blue;
+				left: 10px;
+				top: 10px;
+			}
+			div:nth-child(3) {
+				height: 60%;
+				width: 60%;
+				background-color: white;
+				border: 1px solid blue;
+				left: 20px;
+				top: 20px;
+			}
+			div:nth-child(4) {
+				height: 40%;
+				width: 40%;
+				background-color: red;
+				border: 1px solid blue;
+				left: 30px;
+				top: 30px;
+			}
+			div:nth-child(5) {
+				height: 20%;
+				width: 20%;
+				background-color: white;
+				border: 1px solid blue;
+				left: 40px;
+				top: 40px;
+			}
 			img {
 				width: 100%;
 				height:100%;
