--- a/4.nadal/abakuse.html
+++ b/4.nadal/abakuse.html
@@ -4,10 +4,36 @@
 		<meta charset="utf-8">
 		<title>Kodune ulesanne - 4. nadal (Brokan)</title>
 		<style type="text/css">
-
+			#primary {
+				border: 10px outset;
+				padding-bottom: 50px;
+			}
+			.row {
+				clear: both;
+				border: 1px solid black;
+				margin-top: 50px;
+			}
+			.bead {
+				width: 50px;
+				height: 50px;
+				background-color: green;
+				border-radius: 50px;
+				box-shadow: 0px -15px 23px -3px black inset;
+				float: right;
+				margin-top: -25px;
+			}
 		</style>
 	</head>
 	<body>
-	
+		<div id="primary">
+			<div class="row">
+				<div class="bead"></div>
+				<div class="bead"></div>
+				<div class="bead"></div>
+				<div class="bead"></div>
+				<div class="bead"></div>
+				<div class="bead"></div>
+			</div>
+		</div>		
 	</body>
 </html>
