--- a/4.nadal/abakuse.html
+++ b/4.nadal/abakuse.html
@@ -22,11 +22,17 @@
 				float: right;
 				margin-top: -25px;
 			}
+			.bead.right {
+				float: left;
+			}
 		</style>
 	</head>
 	<body>
 		<div id="primary">
 			<div class="row">
+				<div class="bead right"></div>
+				<div class="bead right"></div>
+				<div class="bead right"></div>
 				<div class="bead"></div>
 				<div class="bead"></div>
 				<div class="bead"></div>
