--- a/4.nadal/abakuse.html
+++ b/4.nadal/abakuse.html
@@ -40,6 +40,53 @@
 				<div class="bead"></div>
 				<div class="bead"></div>
 			</div>
-		</div>		
+			<div class="row">
+				<div class="bead right"></div>
+				<div class="bead right"></div>
+				<div class="bead"></div>
+				<div class="bead"></div>
+				<div class="bead"></div>
+				<div class="bead"></div>
+				<div class="bead"></div>
+				<div class="bead"></div>
+				<div class="bead"></div>
+			</div>
+			<div class="row">
+				<div class="bead right"></div>
+				<div class="bead"></div>
+				<div class="bead"></div>
+				<div class="bead"></div>
+				<div class="bead"></div>
+				<div class="bead"></div>
+				<div class="bead"></div>
+				<div class="bead"></div>
+				<div class="bead"></div>
+			</div>
+			<div class="row">
+				<div class="bead right"></div>
+				<div class="bead right"></div>
+				<div class="bead right"></div>
+				<div class="bead right"></div>
+				<div class="bead right"></div>
+				<div class="bead"></div>
+				<div class="bead"></div>
+				<div class="bead"></div>
+				<div class="bead"></div>
+			</div>
+		</div>	
+		<p>
+			<a href="http://jigsaw.w3.org/css-validator/check/referer">
+				<img style="border:0;width:88px;height:31px"
+					src="http://jigsaw.w3.org/css-validator/images/vcss"
+					alt="Правильный CSS!" />
+			</a>
+		</p>
+		<p>
+			<a href="http://jigsaw.w3.org/css-validator/check/referer">
+			<img style="border:0;width:88px;height:31px"
+				src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+				alt="Правильный CSS!" />
+			</a>
+		</p>		
 	</body>
 </html>
