--- a/6.nadal/index.html
+++ b/6.nadal/index.html
@@ -11,7 +11,9 @@
 		</style>
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 		<script type="text/javascript">
-			
+			window.onload = function(){
+				$("li:first").addClass("active");
+			}			
 		</script>
 	</head>
 	<body>
