--- a/6.nadal/index.html
+++ b/6.nadal/index.html
@@ -13,6 +13,16 @@
 		<script type="text/javascript">
 			window.onload = function(){
 				$("li:first").addClass("active");
+				
+				next = document.getElementById('next');
+				next.onclick = function(){
+					var active = $(".active").removeClass('active');
+					if(active.next() && active.next().length){
+						active .next().addClass('active');
+					}else{
+						active.siblings(":first").addClass('active');
+					}
+				}
 			}			
 		</script>
 	</head>
